--- a/public/com/example/login.html
+++ b/public/com/example/login.html
@@ -3,7 +3,7 @@
     <input type="text" class="input-block-level" placeholder="Email address">
     <input type="password" class="input-block-level" placeholder="Password">
     <label class="checkbox">
-        <input type="checkbox" value="remember-me"> Remember me
-    </label>
+        <input type="checkbox" value="remember-me"> <label style="padding-top: 5px;">Remember me</label>
+    </label><br>
     <button class="btn btn-large btn-primary" type="submit">Sign in</button>
 </form>
