--- a/public/bootstrap.html
+++ b/public/bootstrap.html
@@ -71,15 +71,15 @@
                 <li atom-route-on="\/public" atom-class="active" ><a href="" atom-path="/public" >Home</a></li>
                 <li atom-route-on="\/about" atom-class="active"><a href="about" atom-path="true" >About</a></li>
                 <li atom-route-on="\/contact" atom-class="active"><a href="contact" atom-path="true" >Contact</a></li>
-                <li atom-route-on="\/admin" atom-class="active"><a href="admin" atom-path="true"><em>Admin</em></a></li>
-                <li atom-route-on="\/new_page" atom-class="active"><a href="new_page" atom-path="true">New_Page</a></li>
+                <li atom-route-on="\/admin" atom-class="active"><a href="admin" atom-path="true">Admin</a></li>
+                <li atom-route-on="\/new_page" atom-class="active"><a href="new_page" atom-path="true">How to Create New Page</a></li>
             </ul>
-            <h3>atomjs.org</h3>
+            <h3>atomjs.org</h3> 
         </div>
         <hr>
 
     <!-- public route, uses the atom-route-default attribute to cause a sub-navigation when navigating to root route -->
-   <h1 style="margin-right:-158px; color:#ccc; margin-left:150px;">Welcome to atomjs!!!</h1>
+   <h1 style="margin-right:-158px; color:#000E3C; margin-left:150px;">Welcome to AtomJS!!!</h1>
     <div atom-route="public" atom-route-default="true" atom-load="false">
         <div class="jumbotron" style="background: rgba(76, 175, 80, 0.3); padding:20px; border:1px; border-radius: 5px; box-shadow: 10px 10px 5px #888888;">
             <p class="lead">This is an example site built with atom. It demonstrates public and private content plus navigation and error handling.</p>
@@ -98,7 +98,7 @@
     <div class="row-fluid marketing" atom-template="com.example.about" atom-route="about" atom-load="false"></div>
     <div class="row-fluid marketing" atom-template="com.example.contact" atom-route="contact" atom-load="false"></div>
     <div class="row-fluid" atom-template-controller="com.example.login" atom-route="login" atom-load="false"></div>
-    <div class="row-fluid" atom-template-controller="com.example.admin" atom-route="admin" atom-load="false"></div>
+    <div class="row-fluid" atom-template-controller="com.example.admin" atom-route="admin" atom-load="true"></div>
     <div class="row-fluid" atom-template="com.example.new_page" atom-route="new_page" atom-load="false"></div>
 
     <div id="404"></div>
