--- a/public/com/example/new_page.html
+++ b/public/com/example/new_page.html
@@ -1,3 +1,3 @@
-<h1>New Page!</h1>
+<h1>How to Create New Page</h1>
 <p class="lead">This is a sample page.</p>
 <p>The idea here is that it launches to a new page when a link is clicked. All codes for this functionality is located only in bootstrap.html file.</p>
