Retrieving variable value from .js file

--- a/public/com/example/about.html
+++ b/public/com/example/about.html
@@ -1,7 +1,7 @@
 <div>
-    <h1>atomjs</h1>
+    <center><h1>atomjs</h1></center>
     <hr>
-    <h4>Front-end framework for SPA applications.</h4>
+    <h4 style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:30px">Front-end framework for SPA applications.</h4>
     <p>atomjs is a light-weight, compact front-end library built on <a href="" style="text-decoration: none">requirejs.</a></p>
     <p>Using a simple AMD pattern, and MVC-style separation of markup, style, and code, atomjs enables you to break your site  down into small peices and only load resources when they are actually required. Templates and style can be separated and  combined in custom combinations, and AMD controllers can be used to provide logic and reusable components.</p>
     <p>atomjs uses event delegation and only one instance of any controller is every created, reducing memory footprint and memory leaks. Controllers can still provide per-element instance logic, though the instantiation and event binding only happens once, which saves CPU and memory and improves performance.</p>
