--- a/public/com/example/new_page.html
+++ b/public/com/example/new_page.html
@@ -1,3 +1,6 @@
-<h1>How to Create New Page</h1>
+<br><br><br>
+<center><h1 style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:50px">How to Create New Page</h1></center>
 <p class="lead">This is a sample page.</p>
 <p>The idea here is that it launches to a new page when a link is clicked. All codes for this functionality is located only in bootstrap.html file.</p>
+<h4>These are variables coming from new_page.js:</h4>
+<div id="results"></div> 
