--- a/public/bootstrap.html
+++ b/public/bootstrap.html
@@ -72,9 +72,9 @@
                 <li atom-route-on="\/about" atom-class="active"><a href="about" atom-path="true" >About</a></li>
                 <li atom-route-on="\/contact" atom-class="active"><a href="contact" atom-path="true" >Contact</a></li>
                 <li atom-route-on="\/admin" atom-class="active"><a href="admin" atom-path="true">Admin</a></li>
-                <li atom-route-on="\/new_page" atom-class="active"><a href="new_page" atom-path="true">How to Create New Page</a></li>
+                <li atom-route-on="\/new_page" atom-class="active"><a href="new_page" atom-path="true">Small Tutorial</a></li>
             </ul>
-            <h3>atomjs.org</h3> 
+            <h3>atomjs.org</h3>
         </div>
         <hr>
 
@@ -99,7 +99,7 @@
     <div class="row-fluid marketing" atom-template="com.example.contact" atom-route="contact" atom-load="false"></div>
     <div class="row-fluid" atom-template-controller="com.example.login" atom-route="login" atom-load="false"></div>
     <div class="row-fluid" atom-template-controller="com.example.admin" atom-route="admin" atom-load="true"></div>
-    <div class="row-fluid" atom-template="com.example.new_page" atom-route="new_page" atom-load="false"></div>
+    <div class="row-fluid" atom-template-controller="com.example.new_page" atom-route="new_page" atom-load="true"></div>
 
     <div id="404"></div>
 
