design enhancements for about page

--- a/public/com/example/new_page.html
+++ b/public/com/example/new_page.html
@@ -3,4 +3,4 @@
 <p class="lead">This is a sample page.</p>
 <p>The idea here is that it launches to a new page when a link is clicked. All codes for this functionality is located only in bootstrap.html file.</p>
 <h4>These are variables coming from new_page.js:</h4>
-<div id="results"></div> 
+<div id="results" style="color: #2F0A0A"></div> 
