--- a/public/bootstrap.html
+++ b/public/bootstrap.html
@@ -98,8 +98,8 @@
     <div class="row-fluid marketing" atom-template="com.example.about" atom-route="about" atom-load="false"></div>
     <div class="row-fluid marketing" atom-template="com.example.contact" atom-route="contact" atom-load="false"></div>
     <div class="row-fluid" atom-template-controller="com.example.login" atom-route="login" atom-load="false"></div>
-    <div class="row-fluid" atom-template-controller="com.example.admin" atom-route="admin" atom-load="true"></div>
-    <div class="row-fluid" atom-template-controller="com.example.new_page" atom-route="new_page" atom-load="true"></div>
+    <div class="row-fluid" atom-template-controller="com.example.admin" atom-route="admin" atom-hide="false"></div>
+    <div class="row-fluid" atom-template-controller="com.example.new_page" atom-route="new_page" atom-load="false"></div>
 
     <div id="404"></div>
 
