--- a/public/com/example/about.html
+++ b/public/com/example/about.html
@@ -1,7 +1,7 @@
 <div>
     <center><h1>atomjs</h1></center>
     <hr>
-    <h4 style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:30px">Front-end framework for SPA applications.</h4>
+    <h4 style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:30px;text-align: center;">Front-end framework for SPA applications.</h4>
     <p>atomjs is a light-weight, compact front-end library built on <a href="" style="text-decoration: none">requirejs.</a></p>
     <p>Using a simple AMD pattern, and MVC-style separation of markup, style, and code, atomjs enables you to break your site  down into small peices and only load resources when they are actually required. Templates and style can be separated and  combined in custom combinations, and AMD controllers can be used to provide logic and reusable components.</p>
     <p>atomjs uses event delegation and only one instance of any controller is every created, reducing memory footprint and memory leaks. Controllers can still provide per-element instance logic, though the instantiation and event binding only happens once, which saves CPU and memory and improves performance.</p>
@@ -10,14 +10,14 @@
     <p>atomjs provides a solution to loading content on demand. You are free to use any other libraries to build that content, atomjs does not impose and restrictions in that sense.</p>
     <p>atomjs is perfect for hybrid mobile development where performance and resource modularisation is important.</p>
     <p>Use the simple Nodejs server/app.js to run locally for testing or development purposes.</p>
-    <p><b>Run as root site.</b></p>
+    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Run as root site.</b></p>
     <p>To run as root site, cd to atomjs-3.0.0 folder level:</p>
     <ul>
         <li>node server/app -b bootstrap.html -p 3000</li>
         <li>Hit <a href="">http://localhost:3000</a> in Chrome</li>
     </ul>
     <p>Tests at <a href="">http://localhost:3000/js/lib/atomjs/tests/</a></p>
-    <p><b>Run as sub site.</b></p>
+    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Run as sub site.</b></p>
     <p>To run as sub site, cd to atomjs-3.0.0 folder level:</p>
     <ul>
         <li>cd public</li>
@@ -30,16 +30,16 @@
         <li>Hit localhost:3000/sub/site in Chrome</li>
     </ul>
     <p>Tests at <a href="">http://localhost:3000/sub/site/js/lib/atomjs/tests/</a>.</p>
-    <p><b>Example application included.</b></p>
+    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Example application included.</b></p>
     <p>The public folder contains an example application to demonstrate atomjs features. It is built with <a href="" style="text-decoration: none;">Twitter Bootstrap</a>.</p>
     <ul>
         <li>All content/components for example site are under atomjs-3.0.0/public/com/example</li>
         <li>The entry point for the app is under atomjs-3.0.0/js/atomjs/bootstrap.js</li>
         <li>com/example/admin.js contains an example of providing authentication by controllers to determine whether routes can be opened</li>
     </ul>
-    <p><b>CSS urls</b></p>
+    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>CSS urls</b></p>
     <p>Normally urls in stylesheets are relative to the stylesheet, however if they are loaded by atom as a template or controller style, make them relative to the bootstrap file location (with no leading slashes).</p>
-    <p><b>API and development guide.</b></p>
+    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>API and development guide.</b></p>
     <ul>
         <li>To require the main atom functionality, just define 'atom' as one of the dependencies of your module.</li>
         <li>Leave all src and href paths as relative to the bootstrap file, the server app will find and replace any relative urls in the initial bootstrap.html and all subsequent templates to enable you to move to sub site (It will ignore absolute paths).</li>
