--- a/public/com/example/new_page.html
+++ b/public/com/example/new_page.html
@@ -1,6 +1,9 @@
-<br><br><br>
-<center><h1 style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:50px">How to Create New Page</h1></center>
-<p class="lead">This is a sample page.</p>
-<p>The idea here is that it launches to a new page when a link is clicked. All codes for this functionality is located only in bootstrap.html file.</p>
-<h4>These are variables coming from new_page.js:</h4>
-<div id="results" style="color: #2F0A0A"></div> 
+<br><br>
+<center><h2 style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:40px">How to Create New Page</h2></center>
+<br>
+<p class="lead2">This is a sample page. The idea here is that it launches to a new page when a link is clicked. All codes for this functionality is located only in bootstrap.html file. When you want to call a variable from a separate file just like javascript, just create a separate javascript file for your HTML. This page is actually a sample for this concern.</p>
+<br><br>
+<div class="lead2">
+	<h4>The variables below came from a separate javascript file. These are variables coming from new_page.js:</h4>
+	<div id="results" style="color: #2F0A0A"></div> 
+</div>
