--- a/public/com/example/about.html
+++ b/public/com/example/about.html
@@ -1,45 +1,63 @@
 <div>
-    <center><h1>atomjs</h1></center>
+    <center><h1 style="font-family: 'Courier New', Courier, monospace">What is atomjs?</h1></center>
     <hr>
-    <h4 style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:30px;text-align: center;">Front-end framework for SPA applications.</h4>
-    <p>atomjs is a light-weight, compact front-end library built on <a href="" style="text-decoration: none">requirejs.</a></p>
-    <p>Using a simple AMD pattern, and MVC-style separation of markup, style, and code, atomjs enables you to break your site  down into small peices and only load resources when they are actually required. Templates and style can be separated and  combined in custom combinations, and AMD controllers can be used to provide logic and reusable components.</p>
-    <p>atomjs uses event delegation and only one instance of any controller is every created, reducing memory footprint and memory leaks. Controllers can still provide per-element instance logic, though the instantiation and event binding only happens once, which saves CPU and memory and improves performance.</p>
-    <p>atomjs uses a simple mapping of component id to file system location, which makes understanding implementations easier and intuitive.</p>
-    <p>The core gzipped library is small (~8k) and currently only relies on jQuery and requirejs as dependancies.</p>
-    <p>atomjs provides a solution to loading content on demand. You are free to use any other libraries to build that content, atomjs does not impose and restrictions in that sense.</p>
-    <p>atomjs is perfect for hybrid mobile development where performance and resource modularisation is important.</p>
-    <p>Use the simple Nodejs server/app.js to run locally for testing or development purposes.</p>
-    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Run as root site.</b></p>
-    <p>To run as root site, cd to atomjs-3.0.0 folder level:</p>
-    <ul>
-        <li>node server/app -b bootstrap.html -p 3000</li>
-        <li>Hit <a href="">http://localhost:3000</a> in Chrome</li>
-    </ul>
-    <p>Tests at <a href="">http://localhost:3000/js/lib/atomjs/tests/</a></p>
-    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Run as sub site.</b></p>
-    <p>To run as sub site, cd to atomjs-3.0.0 folder level:</p>
-    <ul>
-        <li>cd public</li>
-        <li>mkdir sub</li>
-        <li>cd sub</li>
-        <li>mkdir site</li>
-        <li>cd ../../../</li>
-        <li>node server/app -b sub/site/bootstrap.html -p 3000 -s sub/site</li>
-        <li>Change atomjs-3.0.0/sub/site/js/atomjs/bootstrap.js "siteRoot" setting to '/sub/site'</li>
-        <li>Hit localhost:3000/sub/site in Chrome</li>
-    </ul>
-    <p>Tests at <a href="">http://localhost:3000/sub/site/js/lib/atomjs/tests/</a>.</p>
-    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Example application included.</b></p>
-    <p>The public folder contains an example application to demonstrate atomjs features. It is built with <a href="" style="text-decoration: none;">Twitter Bootstrap</a>.</p>
-    <ul>
-        <li>All content/components for example site are under atomjs-3.0.0/public/com/example</li>
-        <li>The entry point for the app is under atomjs-3.0.0/js/atomjs/bootstrap.js</li>
-        <li>com/example/admin.js contains an example of providing authentication by controllers to determine whether routes can be opened</li>
-    </ul>
-    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>CSS urls</b></p>
-    <p>Normally urls in stylesheets are relative to the stylesheet, however if they are loaded by atom as a template or controller style, make them relative to the bootstrap file location (with no leading slashes).</p>
-    <p style="background-color: #010206;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>API and development guide.</b></p>
+    <p style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Front-end framework for SPA applications.</b></p>
+    <div class="lead2">
+        <p><b>atomjs</b> is a light-weight, compact front-end library built on <a href="" style="text-decoration: none;color:white">requirejs.</a></p>
+        <p>Using a simple AMD pattern, and MVC-style separation of markup, style, and code, atomjs enables you to break your site  down into small peices and only load resources when they are actually required. Templates and style can be separated and  combined in custom combinations, and AMD controllers can be used to provide logic and reusable components.</p>
+        <p>atomjs uses event delegation and only one instance of any controller is every created, reducing memory footprint and memory leaks. Controllers can still provide per-element instance logic, though the instantiation and event binding only happens once, which saves CPU and memory and improves performance.</p>
+        <p>atomjs uses a simple mapping of component id to file system location, which makes understanding implementations easier and intuitive.</p>
+        <p>The core gzipped library is small (~8k) and currently only relies on jQuery and requirejs as dependancies.</p>
+        <p>atomjs provides a solution to loading content on demand. You are free to use any other libraries to build that content, atomjs does not impose and restrictions in that sense.</p>
+        <p>atomjs is perfect for hybrid mobile development where performance and resource modularisation is important.</p>
+        <p>Use the simple Nodejs server/app.js to run locally for testing or development purposes.</p>
+    </div>
+    <br>
+    <p style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Run as root site.</b></p>
+    <div class="lead2">
+        <p>To run as root site, cd to atomjs-3.0.0 folder level:</p>
+        <ul>
+            <li>node server/app -b bootstrap.html -p 3000</li>
+            <li>Hit <a href="" style="color:white">http://localhost:3000</a> in Chrome</li>
+        </ul>
+        <p>Tests at <a href="" style="color:white">http://localhost:3000/js/lib/atomjs/tests/</a></p>
+    </div>
+    <br>
+    <p style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Run as sub site.</b></p>
+    <div class="lead2">
+        <p>To run as sub site, cd to atomjs-3.0.0 folder level:</p>
+        <ul>
+            <li>cd public</li>
+            <li>mkdir sub</li>
+            <li>cd sub</li>
+            <li>mkdir site</li>
+            <li>cd ../../../</li>
+            <li>node server/app -b sub/site/bootstrap.html -p 3000 -s sub/site</li>
+            <li>Change atomjs-3.0.0/sub/site/js/atomjs/bootstrap.js "siteRoot" setting to '/sub/site'</li>
+            <li>Hit localhost:3000/sub/site in Chrome</li>
+        </ul>
+        <p>Tests at <a href="" style="color:white">http://localhost:3000/sub/site/js/lib/atomjs/tests/</a>.</p>
+    </div>
+    <br>
+    <p style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>Example application included.</b></p>
+
+    <div class="lead2">
+        <p>The public folder contains an example application to demonstrate atomjs features. It is built with <a href="" style="text-decoration: none; color:white">Twitter Bootstrap</a>.</p>
+        <ul>
+            <li>All content/components for example site are under atomjs-3.0.0/public/com/example</li>
+            <li>The entry point for the app is under atomjs-3.0.0/js/atomjs/bootstrap.js</li>
+            <li>com/example/admin.js contains an example of providing authentication by controllers to determine whether routes can be opened</li>
+        </ul>
+    </div>
+    <br>
+    
+    <p style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>CSS urls</b></p>
+    <div class="lead2">
+        <p>Normally urls in stylesheets are relative to the stylesheet, however if they are loaded by atom as a template or controller style, make them relative to the bootstrap file location (with no leading slashes).</p>
+    </div>
+    <br>
+    <p style="background-color: #1D5179;color: white; border-radius: 2px 2px 2px 2px;height:20px;text-align: center;"><b>API and development guide.</b></p>
+    <div class="lead2">
     <ul>
         <li>To require the main atom functionality, just define 'atom' as one of the dependencies of your module.</li>
         <li>Leave all src and href paths as relative to the bootstrap file, the server app will find and replace any relative urls in the initial bootstrap.html and all subsequent templates to enable you to move to sub site (It will ignore absolute paths).</li>
@@ -69,6 +87,7 @@
         </li>
 
     </ul>
+    </div>
 </div>
 
 
