--- a/public/bootstrap.html
+++ b/public/bootstrap.html
@@ -73,6 +73,10 @@
             filter: alpha(opacity=60);
             color: black;
             border-radius: 5px 5px 5px 5px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 20px;
+            padding-bottom: 20px;
 
         }
         .lead2{
@@ -140,7 +144,7 @@
             <div class="lead">
                 <p>This is an example site built with atom. It demonstrates public and private content plus navigation and error handling.You'll need to configure your server to always return the bootstrap.html page for every request. This enables front routing on the client. Try entering <a href="/foobar" style="color:#2F5279">a url which doesn't exist</a>, you'll see the 404 template. Try clicking on Admin, you'll be directed to login. To login, just click the Sign In button <em>(no credentials needed)</em>.</p>
                 <a class="btn btn-large btn-primary" href="login" atom-path="true">Sign In</a>
-                <hr>
+                
             </div>
         </div>
     </div>
